--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.App{margin: 0;
+	padding: 0;
+	background: linear-gradient(to bottom right, #e3f0ff8b, #fafcff73);
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;}
+  .txt{color:rgba(0, 0, 255, 0.444);  background-color: #FAFCFF;  }
